--- a/arkestra_medic/media/css/cardiff/css/ac_navigation.css
+++ b/arkestra_medic/media/css/cardiff/css/ac_navigation.css
@@ -7,6 +7,15 @@ body.no_nav_horiz #wrapper  {
 /*Navigation Styles*/
 /* Main Navigation */
 #nav_main{
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background: none repeat scroll 0 0 #2B2B2B;
+    border-color: #708EF1;
+    border-style: solid;
+    border-width: 0 10px;
+    color: #91908F;
+    padding: 5px 10px;
     width: 940px;
 }
 #nav_main ul{
@@ -16,22 +25,24 @@ body.no_nav_horiz #wrapper  {
 }
 #nav_main li{
     float: left;
-    padding: 0 10px 0 0;
+    padding: 0 2em 0 0;
     text-transform: uppercase;
     font-family: Arial,Helvetica,Verdana,Geneva,sans-serif;
     white-space: nowrap;
+    font-size: 0.8em;
 }
 #nav_main a, #nav_main a:link, #nav_main a:active {
-    color: #333333;
-    font-size: 0.9em
+    color: #91908F;
+    font-size: 1.2em
 }
 #nav_main a:hover {
-    color: #993333;
+    color: #fff;
+    text-decoration: none;
 }
 #nav_main form#cse-search-box {
     float: right;
     margin: 0;
-    padding: 0.6em 0 0;
+    padding: 0.3em 0 0;
     white-space: nowrap;
     width: auto;
 }
