styles for anchors

--- a/arkestra_medic/media/css/cardiff/css/ac.css
+++ b/arkestra_medic/media/css/cardiff/css/ac.css
@@ -6,7 +6,7 @@ body{
     color: #333333;
 }
 a:link, a:visited, a:active {
-    color: #0000FF;
+    color: #000000;
     text-decoration: none;
 }
 a:link:hover, a:visited:hover {
